--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=springboot-restapi
+spring.docker.compose.lifecycle-management=start_only
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=DEBUG
@@ -7,4 +8,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data.sql
-
+spring.threads.virtual.enabled=true
