added exception handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data.sql
 spring.threads.virtual.enabled=true
+
+spring.mvc.problemdetails.enabled=true
+server.error.include-message=always
