--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.threads.virtual.enabled=true
 
 spring.mvc.problemdetails.enabled=true
 server.error.include-message=always
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://fungover.org/auth
+
+#https://fungover.org/sign-up
